@@ -1,6 +1,7 @@
 package beater
 
 import (
+	"regexp"
 	"time"
 
 	"github.com/elastic/apm-server/sourcemap"
@@ -33,11 +34,13 @@ type FrontendConfig struct {
 	LibraryPattern      string         `config:"library_pattern"`
 	ExcludeFromGrouping string         `config:"exclude_from_grouping"`
 	SourceMapping       *SourceMapping `config:"source_mapping"`
+
+	beatVersion string
 }
 
 type SourceMapping struct {
-	Cache *Cache `config:"cache"`
-	Index string `config:"index_pattern"`
+	Cache        *Cache `config:"cache"`
+	IndexPattern string `config:"index_pattern"`
 
 	esConfig *common.Config
 	mapper   sourcemap.Mapper
@@ -75,7 +78,7 @@ func (s *SourceMapping) isSetup() bool {
 	return s != nil && (s.esConfig != nil)
 }
 
-func (c *FrontendConfig) SmapMapper() (sourcemap.Mapper, error) {
+func (c *FrontendConfig) memoizedSmapMapper() (sourcemap.Mapper, error) {
 	smap := c.SourceMapping
 	if !c.isEnabled() || !smap.isSetup() {
 		return nil, nil
@@ -86,7 +89,7 @@ func (c *FrontendConfig) SmapMapper() (sourcemap.Mapper, error) {
 	smapConfig := sourcemap.Config{
 		CacheExpiration:     smap.Cache.Expiration,
 		ElasticsearchConfig: smap.esConfig,
-		Index:               smap.Index,
+		Index:               replaceVersion(c.SourceMapping.IndexPattern, c.beatVersion),
 	}
 	smapMapper, err := sourcemap.NewSmapMapper(smapConfig)
 	if err != nil {
@@ -96,7 +99,12 @@ func (c *FrontendConfig) SmapMapper() (sourcemap.Mapper, error) {
 	return c.SourceMapping.mapper, nil
 }
 
-func defaultConfig() *Config {
+func replaceVersion(pattern, version string) string {
+	re := regexp.MustCompile("%.*{.*beat.version.?}")
+	return re.ReplaceAllLiteralString(pattern, version)
+}
+
+func defaultConfig(beatVersion string) *Config {
 	return &Config{
 		Host:               "localhost:8200",
 		MaxUnzippedSize:    50 * 1024 * 1024, // 50mb
@@ -107,6 +115,7 @@ func defaultConfig() *Config {
 		ShutdownTimeout:    5 * time.Second,
 		SecretToken:        "",
 		Frontend: &FrontendConfig{
+			beatVersion:  beatVersion,
 			Enabled:      new(bool),
 			RateLimit:    10,
 			AllowOrigins: []string{"*"},
@@ -114,7 +123,7 @@ func defaultConfig() *Config {
 				Cache: &Cache{
 					Expiration: 5 * time.Minute,
 				},
-				Index: "apm-*",
+				IndexPattern: "apm-*-sourcemap*",
 			},
 			LibraryPattern:      "node_modules|bower_components|~",
 			ExcludeFromGrouping: "^/webpack",
